用户岛屿缓存和写法优化