@@ -40,8 +40,7 @@ public class HelpCommand extends Command {
     @Override
     public boolean execute(CommandSender sender, String[] arguments) {
         List<Command> availableCommands = IridiumSkyblock.getInstance().getCommandManager().commands.stream()
-                .filter(command -> sender.hasPermission(command.permission) || command.permission.isEmpty())
-                .collect(Collectors.toList());
+                .filter(command -> sender.hasPermission(command.permission) || command.permission.isEmpty()).toList();
 
         int page = 1;
         int maxPage = (int) Math.ceil(availableCommands.size() / 8.0);
@@ -100,7 +99,7 @@ public class HelpCommand extends Command {
     private boolean showCommandHelp(CommandSender commandSender, String[] arguments) {
         String[] newArguments = Arrays.copyOfRange(arguments, 1, arguments.length);
         Optional<Command> commandOptional = IridiumSkyblock.getInstance().getCommandManager().findExecutingCommand(newArguments);
-        if (!commandOptional.isPresent()) {
+        if (commandOptional.isEmpty()) {
             execute(commandSender, new String[0]);
             return false;
         }
